syntax = "proto3";

package raft;

message RequestVoteRequest {
  int32 term = 1;
  string candidate_id = 2;
  int32 last_log_index = 3; 
  int32 last_log_term = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool vote_granted = 2;
}

message LogEntry {
  int32 term = 1;
  // The command is encoded as a string (e.g. JSON) that the server understands.
  string command = 2;
}

message AppendEntriesRequest {
  int32 term = 1;
  string leader_id = 2;
  repeated LogEntry entries = 3;
  int32 prev_log_index = 4;
  int32 prev_log_term = 5;
  int32 leader_commit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

service RaftService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}
